@@ -37,7 +37,7 @@ final class AOKeyStoreManagerHelperCapiAddressBook {
         // sunmscapi.dll tambien lo este
         if (Security.getProvider("SunMSCAPI") == null) { //$NON-NLS-1$
             try {
-                Security.addProvider((Provider) Class.forName("sun.security.mscapi.SunMSCAPI").newInstance()); //$NON-NLS-1$
+                Security.addProvider((Provider) Class.forName("sun.security.mscapi.SunMSCAPI").getConstructor().newInstance()); //$NON-NLS-1$
             }
             catch (final Exception e) {
             	LOGGER.severe("No se ha podido instanciar 'sun.security.mscapi.SunMSCAPI': " + e); //$NON-NLS-1$
@@ -48,7 +48,7 @@ final class AOKeyStoreManagerHelperCapiAddressBook {
         Provider p = Security.getProvider("MSCAPIAddressBook"); //$NON-NLS-1$
         if (p == null) {
             try {
-                p = (Provider) Class.forName("es.gob.afirma.keystores.capiaddressbook.MSCAPIAddressBook").newInstance(); //$NON-NLS-1$
+                p = (Provider) Class.forName("es.gob.afirma.keystores.capiaddressbook.MSCAPIAddressBook").getConstructor().newInstance(); //$NON-NLS-1$
             }
             catch (final Exception e) {
                 throw new MissingLibraryException("No se ha podido instanciar el proveedor MSCAPIAddressBook", e); //$NON-NLS-1$
